src/objects/Opportunity.object
<CustomObject>
    <businessProcesses>
        <fullName>NewProcess</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Closed Lost</fullName>
        </values>
        <values>
            <fullName>Closed Won</fullName>
        </values>
        <values>
            <fullName>Needs Analysis</fullName>
        </values>
        <values>
            <fullName>Negotiation</fullName>
        </values>
        <values>
            <fullName>Proposal</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Partner Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>App Complete%2FApproved</fullName>
        </values>
        <values>
            <fullName>App Complete%2FDenied</fullName>
        </values>
        <values>
            <fullName>App Outstanding</fullName>
        </values>
        <values>
            <fullName>App Pending Review</fullName>
        </values>
        <values>
            <fullName>App Ready</fullName>
        </values>
        <values>
            <fullName>Documents Required</fullName>
        </values>
        <values>
            <fullName>Escalated Review</fullName>
        </values>
        <values>
            <fullName>Pending Seasoning</fullName>
        </values>
        <values>
            <fullName>Reviewing Docs</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Portal User Onboarding</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Complete%2FApproved</fullName>
        </values>
        <values>
            <fullName>Complete%2FDenied</fullName>
        </values>
        <values>
            <fullName>Ready</fullName>
        </values>
        <values>
            <fullName>Training In Process</fullName>
        </values>
        <values>
            <fullName>Withdrawn</fullName>
        </values>
    </businessProcesses>
    <businessProcesses>
        <fullName>Renewals</fullName>
        <isActive>true</isActive>
        <values>
            <fullName>Renewal App Outstanding</fullName>
        </values>
        <values>
            <fullName>Renewal App Reviewing Docs</fullName>
        </values>
        <values>
            <fullName>Renewal Approved</fullName>
        </values>
        <values>
            <fullName>Renewal Denied</fullName>
        </values>
        <values>
            <fullName>Renewal Docs Required</fullName>
        </values>
        <values>
            <fullName>Renewal Escalated Review</fullName>
        </values>
        <values>
            <fullName>Renewal Pending Seasoning</fullName>
        </values>
        <values>
            <fullName>Renewal Withdrawn</fullName>
        </values>
    </businessProcesses>
    <fields>
        <fullName>Addendum_Received_Date__c</fullName>
        <label>Addendum Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Addendum_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Addendum_Required__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Addendum Required? </label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Affiliated_Entities_Received_Date__c</fullName>
        <label>Affiliated Entities Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Affiliated_Entities__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Affiliated Entities</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>App_Sent__c</fullName>
        <label>App Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Application_Date__c</fullName>
        <label>Application Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Assigned_Credit_Risk_Analyst__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Credit Risk Analyst</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities3</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_PCS__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned PCS</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Assigned_Trainer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned Trainer</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>User.Profile.Name</field>
                <operation>equals</operation>
                <value>Trainer</value>
            </filterItems>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Broker_Agreement_Received_Date__c</fullName>
        <label>Broker Agreement Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Broker_Agreement__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Broker Agreement</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Budget_Confirmed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Budget Confirmed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cash__c</fullName>
        <label>Cash</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Certification_and_Authorization_Date__c</fullName>
        <label>Certification and Authorization Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Certification_and_Authorization__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Certification and Authorization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Character_Checks_Received_Date__c</fullName>
        <label>Character Checks Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Character_Checks__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Character Checks</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClientID__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Client Name</label>
        <referenceTo>ClientInfo__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities (Contact)</relationshipLabel>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Corporate_Resolution_Received_Date__c</fullName>
        <label>Corporate Resolution Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Corporate_Resolution__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Corporate Resolution</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Credit_Risk_Package_Status__c</fullName>
        <label>Credit Risk Package Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Initial Review</fullName>
                </value>
                <value>
                    <fullName>Broker Package Incomplete</fullName>
                </value>
                <value>
                    <fullName>Full Review In Process</fullName>
                </value>
                <value>
                    <fullName>Escalated</fullName>
                </value>
                <value>
                    <fullName>Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Credit_risk_package_status_changed_date__c</fullName>
        <label>Credit risk package status changed date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_RV_User__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Current RV User</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Discovery_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Discovery Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>E_sign_Addendum_Received_Date__c</fullName>
        <label>E-sign Addendum Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>E_sign_Addendum__c</fullName>
        <defaultValue>false</defaultValue>
        <label>E-sign Addendum</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Equity__c</fullName>
        <label>Equity</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Estimated_Home_Value__c</fullName>
        <label>Estimated Home Value</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Exclusionary_Lists_Received_Date__c</fullName>
        <label>Exclusionary Lists Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Exclusionary_Lists__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Exclusionary Lists</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Ext__c</fullName>
        <label>Ext</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>FHAC_Sponsored_Originator__c</fullName>
        <defaultValue>false</defaultValue>
        <label>FHAC Sponsored Originator?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FHA_Connection_Link__c</fullName>
        <formula>HYPERLINK("https://entp.hud.gov/clas/index.cfm/" , 'Please click here to be taken to FHA Connection.')</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>FHA Connection Link</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Financials_Received_Date__c</fullName>
        <label>Financials Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Financials__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Financials</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>FirstName__c</fullName>
        <label>First Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Formation_Documents_Received_Date__c</fullName>
        <label>Formation Documents Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Formation_Documents__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Formation Documents</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LO_Comp_2018__c</fullName>
        <defaultValue>false</defaultValue>
        <label>LO Comp 2018</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>LastName__c</fullName>
        <label>Last Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>LoanOfficerName__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>LoanOfficerName</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Officer_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan Officer Name</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities2</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loan_Related_Fees_Related_Policy_Date__c</fullName>
        <label>Loan Related Fees &amp; Related Policy Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Loan_Related_Fees_and_Related_Policy__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Loan Related Fees and Related Policy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Loan__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Loan</label>
        <referenceTo>Loan_New__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Loss_Reason__c</fullName>
        <label>Loss Reason</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Lost to Competitor</fullName>
                </value>
                <value>
                    <fullName>No Budget / Lost Funding</fullName>
                </value>
                <value>
                    <fullName>No Decision / Non-Responsive</fullName>
                </value>
                <value>
                    <fullName>Price</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>MARI_Background_Check_Received_Date__c</fullName>
        <label>MARI Background Check Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>MARI_Background_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>MARI Background Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Margin__c</fullName>
        <label>Margin</label>
        <precision>18</precision>
        <scale>3</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>NMLS_ID_Verified_Date__c</fullName>
        <label>NMLS ID Verified Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NMLS_ID__c</fullName>
        <label>NMLS ID</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>New_CRA_Status__c</fullName>
        <label>New CRA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Next_Recertification_Date__c</fullName>
        <label>Next Recertification Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ORM_Account_Executive_Name__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>ORM Account Executive Name</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Old_CRA_Status__c</fullName>
        <label>Old CRA Status</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opt_In_Lead_Sharing__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Opt In Lead Sharing</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Addendum_Signed_Date__c</fullName>
        <label>Partner Addendum Signed Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Partner_Addendum_Signed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Partner Addendum Signed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Partner_Denial_Reasons__c</fullName>
        <label>Partner Denial Reasons</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Affiliated Entities</fullName>
                </value>
                <value>
                    <fullName>Broker Agreement</fullName>
                </value>
                <value>
                    <fullName>Certification and Authorization</fullName>
                </value>
                <value>
                    <fullName>Character Checks</fullName>
                </value>
                <value>
                    <fullName>Corporate Resolution</fullName>
                </value>
                <value>
                    <fullName>Exclusionary Lists</fullName>
                </value>
                <value>
                    <fullName>Financials</fullName>
                </value>
                <value>
                    <fullName>Formation Documents</fullName>
                </value>
                <value>
                    <fullName>Loan Related Fees and Related Policy</fullName>
                </value>
                <value>
                    <fullName>MARI Background Check</fullName>
                </value>
                <value>
                    <fullName>NMLS ID</fullName>
                </value>
                <value>
                    <fullName>Reputation Check</fullName>
                </value>
                <value>
                    <fullName>Resumes</fullName>
                </value>
                <value>
                    <fullName>W-9</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Phone__c</fullName>
        <label>Phone</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Proper_Addendum_sent_to_RV_Date__c</fullName>
        <label>Proper Addendum sent to RV Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Proper_Addendum_sent_to_RV__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Proper Addendum sent to RV</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QLMS_Account_Executive__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>QLMS Account Executive</label>
        <referenceTo>QLMS_AE__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ROI_Analysis_Completed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>ROI Analysis Completed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>RV_Agreement_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>RV Agreement Received</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Reapplication_Status__c</fullName>
        <label>Reapplication Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>App Package sent to inactive partner</fullName>
                </value>
                <value>
                    <fullName>Application Package Uploaded</fullName>
                </value>
                <value>
                    <fullName>Application Package Accepted by Credit Risk</fullName>
                </value>
                <value>
                    <fullName>App Package incomplete per Credit Risk</fullName>
                </value>
                <value>
                    <fullName>Reapproved</fullName>
                </value>
                <value>
                    <fullName>Denied by Credit Risk</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Recertification_Approval_Date__c</fullName>
        <label>Recertification Approval Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Recertification_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Recertification Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Related_Branch__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Branch</label>
        <referenceTo>Branches__c</referenceTo>
        <relationshipLabel>Opportunities</relationshipLabel>
        <relationshipName>Opportunities</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Related_Individual__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Related Individual</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Opportunities4</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Renewal Questionnaire Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Status__c</fullName>
        <label>Renewal Questionnaire Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Need LOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Reputation_Check_Received_Date__c</fullName>
        <label>Reputation Check Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Reputation_Check__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Reputation Check</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Resumes_Received_Date__c</fullName>
        <label>Resumes Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Resumes__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Resumes</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status_App_Completed_Approved__c</fullName>
        <label>Status App Completed/Approved</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_App_Completed_Denied__c</fullName>
        <label>Status App Completed/Denied</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_App_Outstanding__c</fullName>
        <label>Status App Outstanding</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_App_Pending_Review__c</fullName>
        <label>Status App Pending Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_App_Ready__c</fullName>
        <label>Status App Ready</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Documents_Required__c</fullName>
        <label>Status Documents Required</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Escalated_Review__c</fullName>
        <label>Status Escalated Review</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Reviewing_Docs__c</fullName>
        <label>Status Reviewing Docs</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status_Withdrawn__c</fullName>
        <label>Status Withdrawn</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>Pending</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>StreetAddress__c</fullName>
        <label>Street Address</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <label>Title</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Training_Complete_Date__c</fullName>
        <label>Training Complete Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_In_Process_Date__c</fullName>
        <label>Training In Process Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Sent_to_Trainer_Date__c</fullName>
        <label>Training Sent to Trainer Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Training_Status__c</fullName>
        <label>Training Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Sent to Trainer</fullName>
                </value>
                <value>
                    <fullName>Training in Process</fullName>
                </value>
                <value>
                    <fullName>Training Complete</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Updated_Financial_Received__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Updated Financial Received?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Updated_Financial_Status__c</fullName>
        <label>Updated Financial Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Outstanding</fullName>
                </value>
                <value>
                    <fullName>Completed</fullName>
                </value>
                <value>
                    <fullName>Need LOX</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>W_9_Received_Date__c</fullName>
        <label>W-9 Received Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>W_9__c</fullName>
        <defaultValue>false</defaultValue>
        <label>W-9</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Zip__c</fullName>
        <label>Zip</label>
        <length>11</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>validated__c</fullName>
        <defaultValue>false</defaultValue>
        <label>validated</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Approval_Date_for_Renewal__c</fullName>
        <formula>Renewal_App_Outstanding_Date__c + 35</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Approval Date for Renewal</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Original_Approved_Date__c</fullName>
        <formula>Account.Original_Approved_Date__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Original Approved Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Primary_Contact_Email__c</fullName>
        <label>Primary Contact Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Primary_Contact__c</fullName>
        <formula>Account.Primary_contact_name__r.FirstName &amp; " " &amp;  Account.Primary_contact_name__r.LastName</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Contact</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Primary_Email__c</fullName>
        <formula>Account.Primary_Contact_Email__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Primary Email</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QLMS_Approved__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Is or has this partner ever been a QLMS Approved Partner?</description>
        <label>QLMS Approved</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>QLMS_Provided_Docs__c</fullName>
        <label>QLMS Provided Docs</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>YES</fullName>
                </value>
                <value>
                    <fullName>NO</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_App_Denied_Date__c</fullName>
        <label>Renewal App Denied Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_App_Outstanding_Date__c</fullName>
        <label>Renewal App Outstanding Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_App_Pending_Review_Date__c</fullName>
        <label>Renewal App Pending Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Approval_Date__c</fullName>
        <label>Renewal Approval Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Denied_Reason__c</fullName>
        <label>Renewal Denied Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Background_Check</fullName>
                    <label>Background Check</label>
                </value>
                <value>
                    <fullName>Incomplete_Application</fullName>
                    <label>Incomplete Application</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Renewal_Docs_Required_Date__c</fullName>
        <label>Renewal Docs Required Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Escalated_Review_Date__c</fullName>
        <label>Renewal Escalated Review Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Pending_Seasoning_Date__c</fullName>
        <label>Renewal Pending Seasoning Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Complete__c</fullName>
        <label>Renewal Questionnaire Complete</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Questionnaire_Received_Date__c</fullName>
        <label>Renewal Questionnaire Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Reviewing_Docs_Date__c</fullName>
        <label>Renewal Reviewing Docs Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Withdrawn_Date__c</fullName>
        <label>Renewal Withdrawn Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Renewal_Withdrawn_Reason__c</fullName>
        <label>Renewal Withdrawn Reason</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>StageName</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Background_Check</fullName>
                    <label>Background Check</label>
                </value>
                <value>
                    <fullName>DTRT</fullName>
                </value>
                <value>
                    <fullName>Non_Renewal</fullName>
                    <label>Non-Renewal</label>
                </value>
                <value>
                    <fullName>Partner_Request</fullName>
                    <label>Partner Request</label>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Stage_Date_Change_Date__c</fullName>
        <label>Stage Change Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Financial_Received_Date__c</fullName>
        <label>Updated Financial Received Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Updated_Financials_Complete__c</fullName>
        <label>Updated Financials Complete</label>
        <type>DateTime</type>
    </fields>
</CustomObject>